# test-remote-mcp

./: .gitignore  categories.json  events.db  main.py  pyproject.toml
