[project]
name = "chatbot-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.3.1",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.1",
]
